[tool.poetry]
name = "hand-estimation"
version = "0.1.0"
description = ""
authors = ["Roger Bian <roger.bian@arithmer.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
mediapipe = "^0.10.18"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
